--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 		body {
 			align-items: center;
-			background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-			color: white;
+			background-color: #000;
+			color: black;
 			display: flex;
 			font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
 			justify-content: center;
@@ -46,7 +46,6 @@
 
 <body>
 	<div class="container">
-		<div class="icon">🚧</div>
 		<h1>Under Construction</h1>
 		<p>We're working hard to bring you something amazing. Check back soon!</p>
 	</div>
