--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			background-color: #000;
 			color: black;
 			display: flex;
-			font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+			font-family: sans-serif;
 			justify-content: center;
 			min-height: 100vh;
 			text-align: center;
