--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		body {
 			align-items: center;
-			background-color: #000;
+			background-color: #fff;
 			color: black;
 			display: flex;
 			font-family: sans-serif;
