--- a/index.html
+++ b/index.html
@@ -5,50 +5,26 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dovetail Agency & Collection</title>
-	<style>
-		* {
-			box-sizing: border-box;
-			margin: 0;
-			padding: 0;
-
-		}
-
-		body {
-			align-items: center;
-			background-color: #fff;
-			color: black;
-			display: flex;
-			font-family: sans-serif;
-			justify-content: center;
-			min-height: 100vh;
-			text-align: center;
-		}
-
-		.container {
-			padding: 2rem;
-		}
-
-		h1 {
-			font-size: 3rem;
-			margin-bottom: 1rem;
-		}
-
-		p {
-			font-size: 1.25rem;
-			opacity: 0.9;
-		}
-
-		.icon {
-			font-size: 5rem;
-			margin-bottom: 1.5rem;
-		}
-	</style>
+	<meta name="description" content="Dovetail, founded by collector and curator Noor Al-Qasimi, is a London-based art foundation and agency dedicated to advancing independent cultural practice beyond commercial incentive. Working through close, one-to-one collaboration, Dovetail develops bespoke commissions, supporting research, development, funding, and the realisation of singular works for evolving collections, exhibitions, and publications. Operating in service of expression rather than profit, the foundation prioritises incubation, authorship, and intellectual integrity, guided by originality, ethical stewardship, and the belief that creative vision must remain uncompromised.">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
-	<div class="container">
-		<h1>Under Construction</h1>
-		<p>We're working hard to bring you something amazing. Check back soon!</p>
+	<div class="dovetail-container">
+		<h1 class="sr-only">Dovetail</h1>
+		<img src="/assets/img/dovetail.png" alt="Dovetail logo" class="dovetail-logo">
+		<h2 class="dovetail-subtitle">Art Foundation & Agency</h2>
+
+		<div class="dovetail-bio">
+			<p>
+				<strong>Dovetail</strong>, founded by collector and curator <strong>Noor Al-Qasimi</strong>, is a London-based art foundation and agency dedicated to advancing independent cultural practice beyond commercial incentive. Working through close, one-to-one collaboration, Dovetail develops bespoke commissions, supporting research, development, funding, and the realisation of singular works for evolving collections, exhibitions, and publications. Operating in service of expression rather than profit, the foundation prioritises incubation, authorship, and intellectual integrity, guided by originality, ethical stewardship, and the belief that creative vision must remain uncompromised.
+			</p>
+			<p>&nbsp;</p>
+			<p style="text-align: center;"><a href="mailto:info@dovetailagency.world">info@dovetailagency.world</a></p>
+		</div>
 	</div>
 </body>
 
